--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -13,7 +13,7 @@ RUN set -eux \
       lsof inetutils-ping iproute2 nftables \
       htop procps xz-utils zstd zip unzip tree \
       zsh git curl tcpdump socat jq \
-      python3 python3-dev python3-pip python3-setuptools ipython3 \
+      python3 python3-pip ipython3 \
   \
   ; ln -sf /usr/share/zoneinfo/$TIMEZONE /etc/localtime \
   ; echo "$TIMEZONE" > /etc/timezone \
