--- a/Dockerfile-foundation
+++ b/Dockerfile-foundation
@@ -48,10 +48,11 @@ RUN set -eux \
   ; nvim_ver=$(curl -sSL -H "'$github_header'" $github_api/${nvim_repo}/releases | jq -r '.[0].tag_name') \
   ; nvim_url=https://github.com/${nvim_repo}/releases/download/${nvim_ver}/nvim-linux64.tar.gz \
   ; curl -sSL ${nvim_url} | tar zxf - -C /usr/local --strip-components=1 \
-  ; pip3 --no-cache-dir install neovim neovim-remote \
-        fastapi uvicorn aiohttp aiofile \
+  ; pip3 --no-cache-dir install \
+        neovim neovim-remote requests \
+        # aiohttp aiofile fastapi uvicorn fabric \
         PyParsing decorator more-itertools \
-        typer hydra-core pyyaml invoke fabric \
+        typer hydra-core pyyaml invoke \
         cachetools chronyk fn.py \
   \
   ; cfg_home=/etc/skel \
