--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -14,6 +14,7 @@ RUN set -eux \
       htop procps xz-utils zstd zip unzip tree \
       zsh git curl tcpdump socat jq \
       python3 python3-pip ipython3 \
+      # python3-dev python3-setuptools \
   \
   ; ln -sf /usr/share/zoneinfo/$TIMEZONE /etc/localtime \
   ; echo "$TIMEZONE" > /etc/timezone \
