--- a/Dockerfile-foundation
+++ b/Dockerfile-foundation
@@ -49,11 +49,11 @@ RUN set -eux \
   ; nvim_url=https://github.com/${nvim_repo}/releases/download/${nvim_ver}/nvim-linux64.tar.gz \
   ; curl -sSL ${nvim_url} | tar zxf - -C /usr/local --strip-components=1 \
   ; pip3 --no-cache-dir install \
-        neovim neovim-remote requests \
+        neovim neovim-remote debugpy \
         # aiohttp aiofile fastapi uvicorn fabric \
         PyParsing decorator more-itertools \
         typer hydra-core pyyaml invoke \
-        cachetools chronyk fn.py \
+        requests cachetools chronyk fn.py \
   \
   ; cfg_home=/etc/skel \
   ; mkdir $cfg_home/.zshrc.d \
@@ -74,9 +74,6 @@ RUN set -eux \
                    yaml-language-server \
   ; mv $nvim_home/plugged /opt/vim \
   ; ln -sf /opt/vim/plugged $nvim_home \
-  \
-  ; SKIP_CYTHON_BUILD=1 $nvim_home/plugged/vimspector/install_gadget.py --enable-python \
-  ; rm -f $nvim_home/plugged/vimspector/gadgets/linux/download/debugpy/*/*.zip \
   \
   ; coc_lua_bin_repo=josa42/coc-lua-binaries \
   ; lua_ls_ver=$(curl -sSL -H "'$github_header'" $github_api/${coc_lua_bin_repo}/releases | jq -r '.[0].tag_name') \
