--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -30,5 +30,7 @@ RUN set -eux \
         -e 's!.*\(AuthorizedKeysFile\).*!\1 /etc/authorized_keys/%u!' \
         -e 's!.*\(GatewayPorts\).*!\1 yes!' \
         -e 's!.*\(PasswordAuthentication\).*yes!\1 no!' \
+  ; echo "Match Address 10.0.0.0/8,172.17.0.0/16,192.168.0.0/16\n    PasswordAuthentication yes" \
+        >> /etc/ssh/sshd_config \
   \
   ; apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
