--- a/Dockerfile-foundation
+++ b/Dockerfile-foundation
@@ -67,8 +67,9 @@ RUN set -eux \
   ; nvim_home=$cfg_home/.config/nvim \
   ; git clone --recursive --depth=1 https://github.com/fj0r/nvim-lua.git $nvim_home \
   ; NVIM_BOOTSTRAP=1 \
-    nvim -u $nvim_home/init.vim --headless +'autocmd User PackerComplete sleep 100m | qall' +PackerSync \
-        2>/dev/null || true \
+    nvim -u $nvim_home/init.lua --headless \
+    +'autocmd User PackerComplete quitall' \
+    +'lua require("packer").sync()' \
   #; rm -rf $nvim_home/pack/packer/start/*/.git \
   ; npm install -g pyright \
                    vscode-json-languageserver \
