--- a/Dockerfile-foundation
+++ b/Dockerfile-foundation
@@ -65,7 +65,7 @@ RUN set -eux \
   ; mkdir $cfg_home/.config \
   ; nvim_home=$cfg_home/.config/nvim \
   ; git clone --recursive --depth=1 https://github.com/fj0r/nvim-lua.git $nvim_home \
-  ; ln -sf $cfg_home/.* /root \
+  ; ln -sf $cfg_home/.config $cfg_home/.zshrc* /root \
   \
   ; NVIM_BOOTSTRAP=1 \
     nvim --headless +'autocmd User PackerComplete quitall' +'lua require("packer").sync()' \
