--- a/Dockerfile-foundation
+++ b/Dockerfile-foundation
@@ -43,7 +43,7 @@ RUN set -eux \
 
 RUN set -eux \
   ; curl -sL https://deb.nodesource.com/setup_15.x | bash - \
-  ; apt-get install -y --no-install-recommends nodejs \
+  ; apt-get install -y --no-install-recommends nodejs build-essential \
   \
   ; nvim_ver=$(curl -sSL -H "'$github_header'" $github_api/${nvim_repo}/releases | jq -r '.[0].tag_name') \
   ; nvim_url=https://github.com/${nvim_repo}/releases/download/${nvim_ver}/nvim-linux64.tar.gz \
@@ -85,4 +85,5 @@ RUN set -eux \
       --strip-components=1 \
   \
   ; npm cache clean -f \
+  ; apt-get -y remove build-essential \
   ; apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
