no install locales

--- a/Dockerfile-os
+++ b/Dockerfile-os
@@ -7,13 +7,13 @@ RUN set -eux \
   ; apt-get upgrade -y \
   ; DEBIAN_FRONTEND=noninteractive \
     apt-get install -y --no-install-recommends \
-      locales tzdata ca-certificates \
+      tzdata ca-certificates \
   \
   ; ln -sf /usr/share/zoneinfo/$TIMEZONE /etc/localtime \
   ; echo "$TIMEZONE" > /etc/timezone \
-  ; sed -i /etc/locale.gen \
-        -e 's/# \(en_US.UTF-8 UTF-8\)/\1/' \
-        -e 's/# \(zh_CN.UTF-8 UTF-8\)/\1/' \
-  ; locale-gen \
+  #; sed -i /etc/locale.gen \
+  #      -e 's/# \(en_US.UTF-8 UTF-8\)/\1/' \
+  #      -e 's/# \(zh_CN.UTF-8 UTF-8\)/\1/' \
+  #; locale-gen \
   \
   ; apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
