--- a/Dockerfile-os
+++ b/Dockerfile-os
@@ -1,4 +1,5 @@
-FROM debian:bullseye-slim
+ARG BASE_IMG=debian:bullseye-slim
+FROM ${BASE_IMG}
 
 ENV LANG=C.UTF-8 LC_ALL=C.UTF-8 TIMEZONE=Asia/Shanghai
 
