download nvim config

--- a/Dockerfile-foundation
+++ b/Dockerfile-foundation
@@ -2,6 +2,7 @@ ARG REPO=fj0rd
 FROM ${REPO}/io:base
 
 ARG nvim_repo=neovim/neovim
+ARG nvim_config=fj0r/nvim-lua
 ARG wasmtime_repo=bytecodealliance/wasmtime
 ARG just_repo=casey/just
 ARG watchexec_repo=watchexec/watchexec
@@ -66,11 +67,14 @@ RUN set -eux \
   ; mkdir -p /opt/vim \
   \
   ; mkdir $cfg_home/.config \
-  ; nvim_home=$cfg_home/.config/nvim \
-  ; git clone --recursive --depth=1 https://github.com/fj0r/nvim-lua.git $nvim_home \
   ; ln -sf $cfg_home/.config $cfg_home/.zshrc* /root \
   \
-  ; nvim --headless +'autocmd User PackerComplete ++once sleep 300 | quitall' +'lua require("packer").sync()' \
+  ; nvim_home=$cfg_home/.config/nvim \
+  ; nvim_config_ver=$(curl -sSL -H "'$github_header'" $github_api/${nvim_config}/releases | jq -r '[.[]|select(.prerelease==false)][0].tag_name') \
+  ; nvim_config_url=https://github.com/${nvim_config}/releases/download/${nvim_config_ver}/nvim-cfg.tar.gz \
+  ; curl -sSL ${nvim_config_url} | tar zxf - -C $cfg_home/.config \
+  #; git clone --recursive --depth=1 https://github.com/fj0r/nvim-lua.git $nvim_home \
+  #; nvim --headless +'autocmd User PackerComplete ++once sleep 300 | quitall' +'lua require("packer").sync()' \
   #; rm -rf $nvim_home/pack/packer/start/*/.git \
   ; npm install -g pyright \
                    vscode-json-languageserver \
