--- a/Dockerfile-os
+++ b/Dockerfile-os
@@ -1,5 +1,4 @@
-ARG BASE_IMG=debian:bullseye-slim
-FROM ${BASE_IMG}
+FROM debian:bullseye-slim
 
 ENV LANG=C.UTF-8 LC_ALL=C.UTF-8 TIMEZONE=Asia/Shanghai
 
